src/objects/oAuth2Token__c.object
<CustomObject>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Identifier__c</fullName>
        <formula>oAuth2Service__r.Service_Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>oAuth2Tokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>oAuth2Service__c</fullName>
        <label>oAuth2Service</label>
        <referenceTo>oAuth2Service__c</referenceTo>
        <relationshipLabel>oAuth2Tokens</relationshipLabel>
        <relationshipName>oAuth2Tokens</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>oAuth2Token</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>oAuth2Token Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>oAuth2Tokens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>